# CAFD

./: AGENTS.md  pyproject.toml
config/model/: cesta.yaml  stgcn.yaml
docs/: EXPERIMENT.md  PROPOSAL.md
src/CESTA/: batch.py
src/CESTA/cli/: train.py
src/CESTA/datasets/injected/: graph.py  tabular.py  windowed.py
src/CESTA/evaluation/: __init__.py  evaluator.py  result.py
src/CESTA/models/: base.py  registry.py
src/CESTA/models/spatial/: cesta.py
src/CESTA/models/spatial/cesta/: __init__.py  communication.py  model.py  sequence.py
src/CESTA/models/temporal/: gru.py
src/CESTA/schema/: config.py  window.py
src/CESTA/training/: batch_utils.py  graph_batch.py  objectives.py  trainer.py
